<resources>
    <string name="app_name">UltraSoft</string>
    <string name="cancel">Cancel</string>
    <string name="okay">okay</string>
    <string name="image">image</string>
    <string name="search__">Search...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_to_continue">Login To Continue</string>
    <string name="login">Login</string>
    <string name="please_enter_valid_username">Please enter valid username</string>
    <string name="please_enter_valid_password">Please eneter valid username</string>
    <string name="customer">Customer</string>
    <string name="admin">Admin</string>
    <string name="engineer">Engineer</string>
    <string name="select_role">Select Role</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout ?</string>
    <string name="logged_out_successfully">Logged out successfully.</string>
    <string name="create">Create</string>
    <string name="create_user">Create User</string>
    <string name="all_users">All Users</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="description">Description</string>
    <string name="select_user_type">Select User Type</string>
    <string name="submit">Submit</string>
    <string name="enter_valid_name">Enter valid name</string>
    <string name="enter_valid_mobile">Enter valid mobile</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="enter_valid_remarks">Enter valid remarks</string>
    <string name="enter_valid_desc">Enter valid description</string>
    <string name="users">Users</string>
    <string name="create_asset">Create Asset</string>
    <string name="block">Block</string>
    <string name="unblock">UnBlock</string>
    <string name="create_asset_fields">Create Asset Attributes</string>
    <string name="asset_status">Asset Status</string>
    <string name="asset_type">Asset Type</string>
    <string name="asset_category">Asset Category</string>
    <string name="select_type">Select Type</string>
    <string name="all_complaints">All Complaints</string>
    <string name="asset">Asset</string>
    <string name="complaint">Complaint</string>
    <string name="compressing_video">Compressing Video</string>
    <string name="remarks">Remarks</string>
    <string name="upload">Upload</string>
    <string name="video">Video</string>
    <string name="gallery">Gallery</string>
    <string name="cameraC">Camera</string>
    <string name="camera">Camera</string>
    <string name="no_data_availabe">No data available !</string>
    <string name="resolved">Resolved</string>
    <string name="pending">Pending</string>
    <string name="chats">Chats</string>
    <string name="send_reply">Send reply</string>
    <string name="unable_to_process">Unable to process</string>
    <string name="please_select_a_file_to_upload">Please select a file to upload</string>
    <string name="something_went_wrong_unable_to_process_video">Somthing went wroing unable to process the video.</string>
    <string name="please_attach_file_from_gallery">Please select file from gallery</string>
    <string name="select_category">Select Category</string>
    <string name="assign">Assign</string>
    <string name="select_engineer">Select Engineer</string>
    <string name="support_staff">Support Staff</string>
    <string name="closed">Closed</string>
    <string name="un_assinged">UnAssigned</string>
    <string name="un_assn">UnAssign</string>
    <string name="inprocess">InProcess</string>
    <string name="create_complaint">Create Complaint</string>
    <string name="view_complaint">View Complaint</string>
    <string name="close">Close</string>
    <string name="resolve">Resolve</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_">Forgot Password ?</string>
    <string name="clear_all">Clear All</string>
    <string name="delete_all">Delete All</string>
    <string name="delete">Delete</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>