<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/margin_horizontal"
    android:theme="@style/Theme.UltraSoft"
    tools:context=".ui.fragment.login.LoginFragment">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/image"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/login_to_continue"
        android:textColor="@color/primary"
        android:textSize="@dimen/text24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <TextView
        android:id="@+id/tvRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/select_role"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogin" />


    <RadioGroup
        android:id="@+id/rgRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10dp"
        android:checkedButton="@id/rbAdmin"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvRole">

        <RadioButton
            android:id="@+id/rbAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/admin"
            android:textSize="@dimen/text12sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/customer"
            android:textSize="@dimen/text12sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbEngineer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/engineer"
            android:textSize="@dimen/text12sp"
            android:textStyle="bold" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUserName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10dp"
        android:hint="@string/username"
        app:boxCornerRadiusBottomEnd="@dimen/til_radius"
        app:boxCornerRadiusBottomStart="@dimen/til_radius"
        app:boxCornerRadiusTopEnd="@dimen/til_radius"
        app:boxCornerRadiusTopStart="@dimen/til_radius"
        app:layout_constraintTop_toBottomOf="@id/rgRole">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textCapCharacters"
            android:textSize="@dimen/text12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10dp"
        android:hint="@string/password"
        app:boxCornerRadiusBottomEnd="@dimen/til_radius"
        app:boxCornerRadiusBottomStart="@dimen/til_radius"
        app:boxCornerRadiusTopEnd="@dimen/til_radius"
        app:boxCornerRadiusTopStart="@dimen/til_radius"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/tilUserName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textSize="@dimen/text12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/margin24dp"
        android:background="@drawable/btn_selector"
        android:drawableEnd="@drawable/ic_arrow_forward_24"
        android:drawablePadding="@dimen/padding3dp"
        android:paddingHorizontal="@dimen/padding16dp"
        android:text="@string/login"
        android:textSize="@dimen/text12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>