<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.UltraSoft"
    tools:context=".ui.fragment.complain.create.CreateComplainFragment">

    <include
        android:id="@+id/tb"
        layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin16dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCategory"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin5dp"
                android:hint="@string/select_category"
                app:boxCornerRadiusBottomEnd="@dimen/til_radius"
                app:boxCornerRadiusBottomStart="@dimen/til_radius"
                app:boxCornerRadiusTopEnd="@dimen/til_radius"
                app:boxCornerRadiusTopStart="@dimen/til_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textSize="@dimen/text12sp"
                    android:clickable="false"
                    tools:ignore="LabelFor" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRemarks"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin5dp"
                android:hint="@string/remarks"
                app:boxCornerRadiusBottomEnd="@dimen/til_radius"
                app:boxCornerRadiusBottomStart="@dimen/til_radius"
                app:boxCornerRadiusTopEnd="@dimen/til_radius"
                app:boxCornerRadiusTopStart="@dimen/til_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilCategory">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="start"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:textSize="@dimen/text12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin16dp"
                android:text="@string/upload"
                android:textSize="@dimen/text12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilRemarks" />

            <RadioGroup
                android:id="@+id/fileGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin5dp"
                android:background="@drawable/border_gray"
                android:checkedButton="@id/rbImage"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/padding3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvUpload">

                <RadioButton
                    android:id="@+id/rbImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:text="@string/image"
                    android:textSize="@dimen/text12sp" />

                <RadioButton
                    android:id="@+id/rbVideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:text="@string/video"
                    android:textSize="@dimen/text12sp" />

            </RadioGroup>


            <TextView
                android:id="@+id/tvGallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin10dp"
                android:layout_marginEnd="@dimen/margin5dp"
                android:background="@drawable/border_gray"
                android:drawablePadding="@dimen/padding5dp"
                android:gravity="center"
                android:paddingHorizontal="@dimen/padding12dp"
                android:paddingVertical="@dimen/padding8dp"
                android:text="@string/gallery"
                android:textSize="@dimen/text12sp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_gallery"
                app:layout_constraintEnd_toStartOf="@id/tvCamera"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fileGroup" />

            <TextView
                android:id="@+id/tvCamera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin5dp"
                android:background="@drawable/border_gray"
                android:drawablePadding="@dimen/padding5dp"
                android:gravity="center"
                android:paddingHorizontal="@dimen/padding12dp"
                android:paddingVertical="@dimen/padding8dp"
                android:text="@string/camera"
                android:textSize="@dimen/text12sp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_camera"
                app:layout_constraintEnd_toStartOf="@id/ivPreview"
                app:layout_constraintStart_toEndOf="@id/tvGallery"
                app:layout_constraintTop_toTopOf="@id/tvGallery" />

            <ImageView
                android:id="@+id/ivPreview"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:contentDescription="@string/image"
                android:src="@drawable/image_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvCamera"
                app:layout_constraintTop_toTopOf="@id/tvGallery" />


            <TextView
                android:id="@+id/tvVideoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin16dp"
                android:layout_marginTop="@dimen/margin5dp"
                android:textColor="@color/primary"
                android:textSize="@dimen/text11sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvGallery" />


            <TextView
                android:id="@+id/tvHelper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin5dp"
                android:textColor="@color/red"
                android:textSize="@dimen/text11sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvVideoName" />


            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginVertical="@dimen/margin32dp"
                android:background="@drawable/btn_selector"
                android:enabled="false"
                android:text="@string/submit"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHelper" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include
        android:id="@+id/videoPb"
        layout="@layout/layout_progress_percent" />

</androidx.constraintlayout.widget.ConstraintLayout>


